hphp/hack/test/typecheck/fc_enum_12.php
<?hh // strict

// No using HH\BuiltinEnum
function foo(HH\BuiltinEnum $foo): void {}
